--- a/cookie_window/cookie.html
+++ b/cookie_window/cookie.html
@@ -24,6 +24,7 @@
             <p>Want a great job in tech? Want a six-figure salary? Then you have come to the right place. I am going to tell you all you need to know to get all of that and much more, without you lifting a finger. You can learn passively. Just sit back, close your eyes, and let the sound of my voice make the code sink deep into your brain. </p>
         </section>
     </main>
+   
     <div class="modal" id="modal">
         <div class="close-modal-btn-container">
             <button class="modal-close-btn" id="modal-close-btn" >X</button>
@@ -31,8 +32,25 @@
         <div class="modal-inner" id="modal-inner">
             <h2>We ❤️ Your Data!</h2>
             <p class="modal-text" id="modal-text">We have a strict policy on tracking and spamming: we'll definitely track you, and we'll definitely spam you. To use this site, enter your name and email address and accept our ridiculous terms and conditions.</p>				
+          <form id="submit-form">
+            <input type="text" 
+         name ='fullName' 
+         placeholder="Enter your full name"
+         required>
+
+        <input type="email" 
+        name="userEmail" 
+        placeholder="Enter your email"
+        required>
+
+        <div class="modal-choice-btns" id="modal-choice-btns"></div>
+         <button type="submit" class="modal-btn">Accept</button>
+        <button type ='button'class="modal-btn">Decline</button> 
         </div>
-    </div>
+        </form>
+        </div>
+                   </div>
+         
 
     <script src="cookie.js"></script>
 </body>
