--- a/cookie_window/cookie.html
+++ b/cookie_window/cookie.html
@@ -20,14 +20,14 @@
             </ul>
 
             <h3>My subliminal learning technique worked for Mark Zuckerberg and Albert Einstein, and it can work for you!</h3>
-            <!-- <img src="images/bugatti.jpg"> -->
+            <img src="bugatti.jpg">
             <p>Want a great job in tech? Want a six-figure salary? Then you have come to the right place. I am going to tell you all you need to know to get all of that and much more, without you lifting a finger. You can learn passively. Just sit back, close your eyes, and let the sound of my voice make the code sink deep into your brain. </p>
         </section>
     </main>
    
     <div class="modal" id="modal">
         <div class="close-modal-btn-container">
-            <button class="modal-close-btn" id="modal-close-btn" >X</button>
+            <button class="modal-close-btn" id="modal-close-btn" disabled>X</button>
         </div>
         <div class="modal-inner" id="modal-inner">
             <h2>We ❤️ Your Data!</h2>
@@ -36,16 +36,18 @@
             <input type="text" 
          name ='fullName' 
          placeholder="Enter your full name"
+         aria-label="Full name" 
          required>
 
         <input type="email" 
         name="userEmail" 
         placeholder="Enter your email"
+        aria-label="Email" 
         required>
 
         <div class="modal-choice-btns" id="modal-choice-btns"></div>
          <button type="submit" class="modal-btn">Accept</button>
-        <button type ='button'class="modal-btn">Decline</button> 
+        <button type ='button'class="modal-btn" id="decline_button">Decline</button> 
         </div>
         </form>
         </div>
