complete app functions

--- a/mobile_app/index.html
+++ b/mobile_app/index.html
@@ -17,7 +17,7 @@
   <body>
     <div class="container">
         <img src="cat.png" alt="cat" width="100px">
-    <input type="text" id="input-field" placeholder="Bread" />
+    <input type="text" id="input-field" placeholder="Your item..." />
     <button id="add-button">Add to cart</button>
     <ul id="shopping-list">
         </ul>
